securutygroups.tf
resource "aws_security_group" "WebaapProjectSG" {
  name        = "allow_ssh"
  description = "Allow SS inbound traffic"
  vpc_id      = aws_vpc.WebaapProjectVPC.id

  ingress {
    description      = "allow_ssh"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "allow_http"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "WebaapProjectSG"
  }
}
